Added some properties in the stylesheet. Proejct not completed yet.

--- a/style.css
+++ b/style.css
@@ -54,6 +54,9 @@ body header div {
 
 body #showcase {
   background-image: url("showcase.jpg");
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-position: center;
   color: white;
   text-align: center;
 }
@@ -68,5 +71,11 @@ body #showcase h1 {
 body #showcase blockquote {
   font-size: 1.2rem;
   padding: 0.3rem 3.5rem 3rem 3.5rem;
+}
+
+body #subscribe {
+  background-color: #35424a;
+  display: inline;
+  color: white;
 }
 /*# sourceMappingURL=style.css.map */
