--- a/style.scss
+++ b/style.scss
@@ -1,3 +1,7 @@
+// SASS VARIABLES
+$darkSlateBlue: #35424a;
+$brightRed: #e8491d;
+
 body {
   // font-family: Arial, Helvetica, sans-serif;
   // // font-size: 15px;
@@ -9,7 +13,7 @@ body {
   header {
     position: static;
     top: 0;
-    background-color: #35424a;
+    background-color: $darkSlateBlue;
     min-width: 100%;
       h2 {
         position: relative;
@@ -19,7 +23,7 @@ body {
         color: white;
         font-size: 1.9rem !important;
         span {
-          color: #e8491d;
+          color: $brightRed;
         }
       }
       ul {
@@ -43,11 +47,14 @@ body {
         }
       }
     div {
-      border-top: 4px solid #e8491d;
+      border-top: 4px solid $brightRed;
     }
   }
   #showcase {
     background-image: url("showcase.jpg");
+    background-repeat: no-repeat;
+    background-attachment: fixed;
+    background-position: center; 
     color: white;
     text-align: center;
     h1 {
@@ -60,5 +67,10 @@ body {
       font-size: 1.2rem;
       padding: 0.3rem 3.5rem 3rem 3.5rem;
     }
+  }
+  #subscribe {
+    background-color: $darkSlateBlue;
+    display: inline;
+    color: white;
   }
 }
