--- a/style.css
+++ b/style.css
@@ -1,18 +1,22 @@
-body {
+html {
+  overflow-x: hidden;
+}
+
+html body {
   font: 15px/1.5 Ariel, Helvetica, sans-serif;
   padding: 0;
   margin: 0;
   background-color: #f4f4f4;
 }
 
-body header {
+html body header {
   position: static;
   top: 0;
   background-color: #35424a;
   min-width: 100%;
 }
 
-body header h2 {
+html body header h2 {
   position: relative;
   top: 1.9rem;
   left: 5rem;
@@ -21,11 +25,11 @@ body header h2 {
   font-size: 1.9rem !important;
 }
 
-body header h2 span {
+html body header h2 span {
   color: #e8491d;
 }
 
-body header ul {
+html body header ul {
   position: relative;
   bottom: 1.5rem;
   right: -70%;
@@ -34,7 +38,7 @@ body header ul {
   white-space: nowrap;
 }
 
-body header ul li {
+html body header ul li {
   position: relative;
   right: 10rem;
   display: inline;
@@ -43,16 +47,16 @@ body header ul li {
   font-size: 1.05rem;
 }
 
-body header ul li a {
+html body header ul li a {
   text-decoration: none;
   color: white;
 }
 
-body header div {
+html body header div {
   border-top: 4px solid #e8491d;
 }
 
-body #showcase {
+html body #showcase {
   background-image: url("showcase.jpg");
   background-repeat: no-repeat;
   background-attachment: fixed;
@@ -61,21 +65,50 @@ body #showcase {
   text-align: center;
 }
 
-body #showcase h1 {
+html body #showcase h1 {
   font-size: 3.4rem;
   padding: 6rem 5rem 0 5rem;
   margin-top: 0;
   margin-bottom: 0.5rem;
 }
 
-body #showcase blockquote {
+html body #showcase blockquote {
   font-size: 1.2rem;
   padding: 0.3rem 3.5rem 3rem 3.5rem;
 }
 
-body #subscribe {
-  background-color: #35424a;
-  display: inline;
+html body #newsletter {
+  background-color: #35424a !important;
+  display: inline-block;
   color: white;
+  width: 100%;
+  margin-top: -1.8%;
+}
+
+html body #newsletter h3 {
+  margin-top: 0;
+  position: relative;
+  left: 10%;
+  bottom: -2rem;
+  font-size: 1.4rem;
+}
+
+html body #newsletter form {
+  position: relative;
+  right: -60%;
+  top: -1.5rem;
+}
+
+html body #newsletter form input[type=text], html body #newsletter form select {
+  width: 15rem;
+  height: 3em;
+}
+
+html body #newsletter form input[type=submit] {
+  background-color: #e8491d;
+  color: white;
+  width: 6rem;
+  height: 2.5rem;
+  border-style: none;
 }
 /*# sourceMappingURL=style.css.map */
