Added in the span tags for the Acme in h2 and their respective li pages.

--- a/about.css
+++ b/about.css
@@ -25,7 +25,7 @@ html body header h2 {
   font-size: 1.9rem !important;
 }
 
-html body header h2 span {
+html body header span {
   color: #e8491d;
 }
 
