--- a/services.css
+++ b/services.css
@@ -25,7 +25,7 @@ html body header h2 {
   font-size: 1.9rem !important;
 }
 
-html body header h2 span {
+html body header span {
   color: #e8491d;
 }
 
